Add APIs to control GCP to AWS VPN tunnel
